--- a/Lab0JS/index.html
+++ b/Lab0JS/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="sheet.css" media="screen" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tytuł strony</title>
   </head>
   <body>
@@ -43,23 +44,23 @@
       <!--Tutaj treść strony / Here the content of the page -->
       <h1>Treść strony</h1>
       <blockquote>
-        Natenczas Wojski chwycił na taśmie przypięty Swój róg bawoli, długi,
+        <p>Natenczas Wojski chwycił na taśmie przypięty Swój róg bawoli, długi,
         cętkowany, kręty Jak wąż boa, oburącz do ust go przycisnął, Wzdął
         policzki jak banię, w oczach krwią zabłysnął, Zasunął wpół powieki,
         wciągnął w głąb pół brzucha I do płuc wysłał z niego cały zapas ducha, I
         zagrał: róg jak wicher, wirowatym dechem Niesie w puszczę muzykę i
-        podwaja echem. Umilkli strzelcy, stali szczwacze zadziwieni Mocą,
+        podwaja echem.</p> <p>Umilkli strzelcy, stali szczwacze zadziwieni Mocą,
         czystością, dziwną harmoniją pieni. Starzec cały kunszt, którym niegdyś
         w lasach słynął, Jeszcze raz przed uszami myśliwców rozwinął; Napełnił
         wnet, ożywił knieje i dąbrowy, Jakby psiarnię w nie wpuścił i rozpoczął
-        łowy. Bo w graniu była łowów historyja krótka: Zrazu odzew dźwięczący,
+        łowy.</p> <p>Bo w graniu była łowów historyja krótka: Zrazu odzew dźwięczący,
         rześki: to pobudka; Potem jęki po jękach skomlą: to psów granie; A
-        gdzieniegdzie ton twardszy jak grzmot: to strzelanie.
+        gdzieniegdzie ton twardszy jak grzmot: to strzelanie.</p>
       </blockquote>
     </main>
     <footer class="azure border margins">
       <!-- Tutaj treść stopki / Here the content of the footer -->
-      <a href="mailto:your.email.address">Imię Nazwisko</a>
+      <a href="mailto:stanislaw.barycki@gmail.com">Stanisław Barycki</a>
     </footer>
   </body>
 </html>
