--- a/Lab0JS/Zad 4/index.html
+++ b/Lab0JS/Zad 4/index.html
@@ -37,6 +37,7 @@
     </ul>
 </nav>
 <!-- Tutaj treść panelu bocznego / Here the content of the side panel-->
+<div class="wrapper">
 <aside class="azure border margins">
     <h1>Panel boczny</h1>
     <h2>Ciekawe odsyłacze</h2>
@@ -54,6 +55,7 @@
 </aside>
 <div class="img-conteiner border azure margins">
     <img src="images/pan-Tadeusz%201.jpg">
+</div>
 </div>
 <main class="azure border margins">
     <!--Tutaj treść strony / Here the content of the page -->
