--- a/Lab0JS/Zad 4/index.html
+++ b/Lab0JS/Zad 4/index.html
@@ -1,84 +1,103 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <!-- Zmień wartość "lang" z 'en' na 'pl' -->
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+          crossorigin="anonymous"><!-- Icons -->
     <link rel="stylesheet"
-          href="https://www.w3schools.com/w3css/4/w3.css"><!-- Icons -->
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="sheet.css" media="screen" type="text/css" />
+          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <title>
-        Tytuł strony / Page Title
+        Tytuł strony / Page tile
     </title>
 </head>
 <body>
-<header class="azure border margins">
-    <!-- Page title -->
-    <!-- Background color: #EFF -->
-    <!-- Border color: #A8A8A8 -->
-    <h1>Tytuł strony</h1>
-</header>
-<nav class="azure border margins">
-    <!--Tutaj menu nawigacyjne / Here the navigation menu -->
-    <!-- left & right margin: 25px -->
-    <ul>
-        <li>
-            <a href="">Element 1</a>
-        </li>
-        <li>
-            <a href="">Element 2</a>
-        </li>
-    </ul>
+<nav class="navbar navbar-expand-lg" style="background-color: #ffa901;">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+                aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarScroll">
+            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"><i class="bi bi-car-front"></i></a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
+                        pojazdy
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Samochody</a></li>
+                        <li><a class="dropdown-item" href="#">Przyczepy</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
 </nav>
-<!-- Tutaj treść panelu bocznego / Here the content of the side panel-->
-<div class="wrapper">
-<aside class="azure border margins">
-    <h1>Panel boczny</h1>
-    <h2>Ciekawe odsyłacze</h2>
-    <ul>
-        <li>
-            <a href="">Odsyłacz 1</a>
-        </li>
-        <li>
-            <a href="">Odsyłacz 2</a>
-        </li>
-        <li>
-            <a href="">Odsyłacz 3</a>
-        </li>
-    </ul>
-</aside>
-<div class="img-conteiner border azure margins">
-    <img src="images/pan-Tadeusz%201.jpg">
+<div class="container text-center">
+    <div class="row">
+        <div class="col">
+            <div class="card" style="width: 25rem;">
+                <img src="img/BMW%20i4.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 10rem;">
+                <img src="img/skoda.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class=" col-sm-8 float-sm-end">
+            <div class="card float-sm-end" style="width: 10rem;">
+                <img src="img/przyczepa-z-plandeką.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card card float-sm-end" style="width: 12rem;">
+                <img src="img/przyczepa.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-</div>
-<main class="azure border margins">
-    <!--Tutaj treść strony / Here the content of the page -->
-    <h1>Treść strony</h1>
-    <blockquote>
-        <p>Natenczas Wojski chwycił na taśmie przypięty Swój róg bawoli, długi,
-            cętkowany, kręty Jak wąż boa, oburącz do ust go przycisnął, Wzdął
-            policzki jak banię, w oczach krwią zabłysnął, Zasunął wpół powieki,
-            wciągnął w głąb pół brzucha I do płuc wysłał z niego cały zapas ducha, I
-            zagrał: róg jak wicher, wirowatym dechem Niesie w puszczę muzykę i
-            podwaja echem.</p> <p>Umilkli strzelcy, stali szczwacze zadziwieni Mocą,
-        czystością, dziwną harmoniją pieni. Starzec cały kunszt, którym niegdyś
-        w lasach słynął, Jeszcze raz przed uszami myśliwców rozwinął; Napełnił
-        wnet, ożywił knieje i dąbrowy, Jakby psiarnię w nie wpuścił i rozpoczął
-        łowy.</p> <p>Bo w graniu była łowów historyja krótka: Zrazu odzew dźwięczący,
-        rześki: to pobudka; Potem jęki po jękach skomlą: to psów granie; A
-        gdzieniegdzie ton twardszy jak grzmot: to strzelanie.</p>
-    </blockquote>
-</main>
-<footer class="azure border margins">
-    <!-- Tutaj treść stopki / Here the content of the footer -->
-    <a href="mailto:stanislaw.barycki@gmail.com">Stanisław Barycki</a>
-</footer>
-<script src="https://www.w3schools.com/lib/w3.js"></script>
+
+
+<!-- Umieść tutaj treść elementu 'body' z zadania 1 -->
+<!-- Put here the contents of the 'body' element from exercise 1 -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
