--- a/Lab0JS/Zad 4/index.html
+++ b/Lab0JS/Zad 4/index.html
@@ -14,6 +14,8 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+    <link rel="stylesheet"
+          href="style.css">
     <title>
         Tytuł strony / Page tile
     </title>
@@ -52,45 +54,76 @@
 </nav>
 <div class="container text-center">
     <div class="row">
-        <div class="col">
-            <div class="card" style="width: 25rem;">
+        <div class="col-sm-8">
+            <div class="card rotate" style="width: 100%">
                 <img src="img/BMW%20i4.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card" style="width: 10rem;">
-                <img src="img/skoda.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class=" col-sm-8 float-sm-end">
-            <div class="card float-sm-end" style="width: 10rem;">
-                <img src="img/przyczepa-z-plandeką.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <div class="card-text text-start">
+                        <h3 class="card-text text-start">
+                        BMW i4
+                    </h3>
+                        <ul>
+                            <li>
+                                Silnik benzynowy
+                            </li>
+                            <li>
+                                Skrzynia biegów automat
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-sm-4">
-            <div class="card card float-sm-end" style="width: 12rem;">
+            <div class="card rotate" style="width: 100%;">
+                <img src="img/skoda.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="card-text text-start">
+                        <h3 class="card-text text-start">
+                            Skoda Superb
+                        </h3>
+                        <ul>
+                            <li>
+                                Silnik benzynowy
+                            </li>
+                            <li>
+                                Skrzynia biegów automat
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+        </div>
+    </div>
+    <div class="row">
+        <div class=" col-sm-8 float-end">
+            <div class="card float-end rotate" style="width: 60%;">
+                <img src="img/przyczepa-z-plandeką.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="card-text text-start">
+                        <h3 class="card-text text-start">
+                            Przyczepa samochodowa z plandeką
+                        </h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card rotate" style="width: 80%;">
                 <img src="img/przyczepa.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <div class="card-text text-start">
+                        <h3 class="card-text text-start">
+                            Przyczepa samochodowa bez plandeki super
+                        </h3>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="conteiner text-start text-light bg-success"><i class="bi bi-c-circle"></i>SzablonyCyberAGH</div>
 </div>
 
 
