--- a/Lab2/Zad4/index.html
+++ b/Lab2/Zad4/index.html
@@ -19,6 +19,7 @@
     <title>
         Tytuł strony / Page tile
     </title>
+    <script src="Script.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg" style="background-color: #ffa901;">
@@ -122,6 +123,10 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="mb-3">
+        <input class="form-control form-control-lg" type="text" placeholder="komenda" aria-label=".form-control-lg example">
+        <button type="button" onclick class="btn btn-dark">Dark</button>
     </div>
     <div class="conteiner text-start text-light bg-success"><i class="bi bi-c-circle"></i>SzablonyCyberAGH</div>
 </div>
