--- a/Lab2/Zad4/index.html
+++ b/Lab2/Zad4/index.html
@@ -48,7 +48,7 @@
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button onclick="doCommand()" class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
     </div>
@@ -125,8 +125,8 @@
         </div>
     </div>
     <div class="mb-3">
-        <input class="form-control form-control-lg" type="text" placeholder="komenda" aria-label=".form-control-lg example">
-        <button type="button" onclick class="btn btn-dark">Dark</button>
+        <input id="command-input" class="form-control form-control-lg" type="text" placeholder="komenda" aria-label=".form-control-lg example">
+        <button type="button" onclick="doCommand()" class="btn btn-dark">Dark</button>
     </div>
     <div class="conteiner text-start text-light bg-success"><i class="bi bi-c-circle"></i>SzablonyCyberAGH</div>
 </div>
@@ -137,5 +137,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+<script>
+    initDB();
+</script>
 </body>
 </html>
