--- a/Lab1/Zad 1 2/index.html
+++ b/Lab1/Zad 1 2/index.html
@@ -6,13 +6,13 @@
     <title>Tytuł strony</title>
   </head>
   <body>
-    <header class="azure border margins">
+    <header class="azure border margins element">
       <!-- Page title -->
       <!-- Background color: #EFF -->
       <!-- Border color: #A8A8A8 -->
       <h1>Tytuł strony</h1>
     </header>
-    <nav class="azure border margins">
+    <nav class="azure border margins element">
       <!--Tutaj menu nawigacyjne / Here the navigation menu -->
       <!-- left & right margin: 25px -->
       <ul>
@@ -25,7 +25,7 @@
       </ul>
     </nav>
     <!-- Tutaj treść panelu bocznego / Here the content of the side panel-->
-    <aside class="azure border margins">
+    <aside class="azure border margins element">
       <h1>Panel boczny</h1>
       <h2>Ciekawe odsyłacze</h2>
       <ul>
@@ -40,7 +40,7 @@
         </li>
       </ul>
     </aside>
-    <main class="azure border margins">
+    <main class="azure border margins element">
       <!--Tutaj treść strony / Here the content of the page -->
       <h1>Treść strony</h1>
       <blockquote>
@@ -58,7 +58,7 @@
         gdzieniegdzie ton twardszy jak grzmot: to strzelanie.</p>
       </blockquote>
     </main>
-    <footer class="azure border margins">
+    <footer class="azure border margins element">
       <!-- Tutaj treść stopki / Here the content of the footer -->
       <a href="mailto:stanislaw.barycki@gmail.com">Stanisław Barycki</a>
     </footer>
